--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,9 @@
   gap: 10px;
 }
 
-.right-side button {
+.right-side a.btn-link {
   width: 100%;
-  
+  text-decoration: none;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: bold;
@@ -141,7 +141,7 @@
     "contact";
   }
 
-  .right-side button {
+  .right-side a.btn-link {
     grid-area: button;
     font-size: 24px;
     font-weight: bold;
