--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  padding-bottom: 10%;
 }
 
 .right-side a.btn-link {
@@ -67,9 +68,9 @@
 
 .right-side p.lokasi {
   font-family: 'Inter', sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   line-height: 18px;
   text-align: center;
 }
@@ -88,13 +89,13 @@
 .right-side .contact p {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
-  font-size: 14px;
-  letter-spacing: 3px;
+  font-size: 12px;
+  letter-spacing: 2px;
   text-align: left;
 }
 
 .right-side .contact img {
-  width: 100px;
+  width: 50px;
 }
 
 @media only screen and (min-width: 767px) {
